5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1668_2973.log
== TEST (2019-04-15 19:21:48) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- ERROR:
File "XXXX", line 5
    if(v<=):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:22:00) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=1000):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:22:14) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=1000):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- EXECUTION TIME:
0.15986
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
OK
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:18) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=1000):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:28) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=1000):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:49) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=1000):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:06) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=1000):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:35) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:49) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- EXECUTION TIME:
0.169259
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:28) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:38) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:07) 
-- CODE:
si=int(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- EXECUTION TIME:
0.152144
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:19) 
-- CODE:
si=float(input("posicao inicial: "))
v=int(input("velocidade do objeto: "))
t=float(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- EXECUTION TIME:
0.208457
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:30) 
-- CODE:
si=float(input("posicao inicial: "))
v=float(input("velocidade do objeto: "))
t=int(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- EXECUTION TIME:
0.143486
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:59) 
-- CODE:
si=int(input("posicao inicial: "))
v=int(input("velocidade do objeto: "))
t=int(input("tempo de deslocamento: "))
sf=si+(v*t)
if(v<=100):
	print(sf)
	print("OK")
else:
	print(sf)
	print("ACIMA")
-- EXECUTION TIME:
0.154905
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
